[package]
name = "awc-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2"
awc = { git = "https://github.com/actix/actix-web", package = "awc" }

#[patch.crates-io]
#actix-http = { git = "https://github.com/polachok/actix-web", package = "actix-http", branch = "no-flush" }
